--- a/app/src/main/res/layout/operations.xml
+++ b/app/src/main/res/layout/operations.xml
@@ -5,7 +5,8 @@
     android:orientation="horizontal"
     android:paddingLeft="@dimen/activity_vertical_margin"
     android:paddingTop="8dp"
-    android:paddingBottom="8dp">
+    android:paddingBottom="8dp"
+    android:paddingRight="@dimen/activity_vertical_margin">
 
     <ImageView
         android:id="@+id/img"
@@ -16,6 +17,11 @@
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:text="Place Holder"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:gravity="center_vertical"
         />
 
 </LinearLayout>
