--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#008806</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
-    <color name="accent_material_dark">#009926</color>
+    <color name="colorAccent">#009906</color>
+    <color name="accent_material_dark">#000000</color>
+    <color name="holo_primary">#4caf50</color>
 </resources>
