--- a/app/src/main/res/layout/operations.xml
+++ b/app/src/main/res/layout/operations.xml
@@ -9,6 +9,7 @@
     android:paddingRight="@dimen/activity_vertical_margin">
 
     <ImageView
+        android:contentDescription="@string/icon"
         android:id="@+id/img"
         android:layout_width="60dp"
         android:layout_height="60dp" />
@@ -17,9 +18,11 @@
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="Place Holder"
+        android:text="@string/place_holder"
         android:textSize="16sp"
+        android:layout_marginLeft="8dp"
         android:textStyle="bold"
+        android:layout_marginStart="8dp"
         android:textColor="#FFFFFF"
         android:gravity="center_vertical"
         />
