--- a/app/src/main/res/layout/activity_three_sides.xml
+++ b/app/src/main/res/layout/activity_three_sides.xml
@@ -105,7 +105,6 @@
             android:background="@android:color/darker_gray" />
 
 
-
         <Button
             android:id="@+id/button01"
             android:layout_width="match_parent"
@@ -121,13 +120,18 @@
         <TextView
             android:id="@+id/result_01"
             android:layout_width="match_parent"
-            android:layout_marginBottom="32dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="24dp"
-            android:gravity="center_horizontal"
+            android:layout_height="54dp"
+            android:text="@string/result"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="22dp"
+            android:paddingStart="16dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:gravity="center_vertical"
             android:textColor="#FFFFFF"
             android:textSize="18sp"
-            android:textStyle="bold" />
+            android:background="@color/colorPrimary"
+            />
 
     </LinearLayout>
 </ScrollView>
