--- a/app/src/main/res/layout/activity_two_sides_and_angle.xml
+++ b/app/src/main/res/layout/activity_two_sides_and_angle.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.sample.kedroon.easymath.BaseAndHeight">
+    tools:context="com.sample.kedroon.easymath.TwoSidesAndAngle">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,13 +22,13 @@
             android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/base"
+                android:id="@+id/side1"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_weight="1"
-                android:hint="@string/base"
+                android:hint="@string/side01"
                 android:inputType="numberDecimal" />
 
             <View
@@ -37,16 +37,32 @@
                 android:background="@android:color/darker_gray" />
 
             <EditText
-                android:id="@+id/height"
+                android:id="@+id/side2"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_weight="1"
+                android:hint="@string/side02"
+                android:inputType="numberDecimal" />
+
+            <View
+                android:layout_width="1dp"
+                android:layout_height="48dp"
+                android:background="@android:color/darker_gray" />
+
+            <EditText
+                android:id="@+id/angle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"
                 android:layout_weight="1"
-                android:hint="@string/height"
+                android:hint="@string/angleactivity"
                 android:inputType="numberDecimal" />
 
         </LinearLayout>
+
 
         <View
             android:layout_width="match_parent"
@@ -71,13 +87,14 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/formula"
-            android:src="@drawable/baseaheight" />
+            android:src="@drawable/tsidesoangle" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray" />
+
 
         <Button
             android:id="@+id/button01"
@@ -97,7 +114,7 @@
             android:layout_height="54dp"
             android:text="@string/result"
             android:layout_marginTop="16dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="22dp"
             android:paddingStart="16dp"
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
@@ -109,3 +126,7 @@
 
     </LinearLayout>
 </ScrollView>
+
+
+
+
