--- a/app/src/main/res/layout/geometric_forms.xml
+++ b/app/src/main/res/layout/geometric_forms.xml
@@ -3,15 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_custom"
     tools:context="com.sample.kedroon.easymath.GeometricForms">
 
     <ListView
         android:id="@+id/geometric_list"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content">
 
     </ListView>
-
 
 
 </RelativeLayout>
