--- a/app/src/main/res/layout/operations.xml
+++ b/app/src/main/res/layout/operations.xml
@@ -3,28 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:paddingLeft="@dimen/activity_vertical_margin"
-    android:paddingTop="8dp"
     android:paddingBottom="8dp"
-    android:paddingRight="@dimen/activity_vertical_margin">
+    android:paddingLeft="@dimen/activity_vertical_margin"
+    android:paddingRight="@dimen/activity_vertical_margin"
+    android:paddingTop="8dp">
 
     <ImageView
-        android:contentDescription="@string/icon"
         android:id="@+id/img"
         android:layout_width="60dp"
-        android:layout_height="60dp" />
+        android:layout_height="60dp"
+        android:contentDescription="@string/icon" />
 
     <TextView
         android:id="@+id/txt"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="@string/place_holder"
-        android:textSize="16sp"
         android:layout_marginLeft="8dp"
-        android:textStyle="bold"
         android:layout_marginStart="8dp"
-        android:textColor="#FFFFFF"
         android:gravity="center_vertical"
-        />
+        android:text="@string/place_holder"
+        android:textColor="#FFFFFF"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
