--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#009906</color>
     <color name="accent_material_dark">#000000</color>
     <color name="holo_primary">#4caf50</color>
+    <color name="background_dark">#000000</color>
+    <color name="black">#000000</color>
+    <color name="background_custom">#212121</color>
 </resources>
