--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#008806</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#1B5E20</color>
     <color name="colorAccent">#009906</color>
     <color name="accent_material_dark">#000000</color>
     <color name="holo_primary">#4caf50</color>
