--- a/app/src/main/res/layout/activity_equilateral_triangle.xml
+++ b/app/src/main/res/layout/activity_equilateral_triangle.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_custom"
-    tools:context="com.sample.kedroon.easymath.EquilateralTriangle">
+    tools:context="com.sample.kedroon.easymath.EquilateralTriangle"
+    android:id="@+id/equilateral_triangle">
 
     <LinearLayout
         android:layout_width="match_parent"
