--- a/app/src/main/res/layout/activity_three_sides.xml
+++ b/app/src/main/res/layout/activity_three_sides.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_custom"
-    tools:context="com.sample.kedroon.easymath.ThreeSides">
+    tools:context="com.sample.kedroon.easymath.ThreeSides"
+    android:id="@+id/three_sides">
 
     <LinearLayout
         android:layout_width="match_parent"
