--- a/app/src/main/res/layout/square_activity.xml
+++ b/app/src/main/res/layout/square_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/square"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background_custom"
-    tools:context="com.sample.kedroon.easymath.TwoSidesAndAngle"
-    android:id="@+id/two_sides_and_angle">
+    tools:context="com.sample.kedroon.easymath.SquareActivity">
+
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,53 +18,14 @@
         android:paddingTop="@dimen/activity_vertical_margin">
 
 
-        <LinearLayout
-            android:id="@+id/input"
+        <EditText
+            android:id="@+id/side"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/side1"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:hint="@string/side01"
-                android:inputType="numberDecimal" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="48dp"
-                android:background="@android:color/darker_gray" />
-
-            <EditText
-                android:id="@+id/side2"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_weight="1"
-                android:hint="@string/side02"
-                android:inputType="numberDecimal" />
-
-            <View
-                android:layout_width="1dp"
-                android:layout_height="48dp"
-                android:background="@android:color/darker_gray" />
-
-            <EditText
-                android:id="@+id/angle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_weight="1"
-                android:hint="@string/angleactivity"
-                android:inputType="numberDecimal" />
-
-        </LinearLayout>
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:hint="@string/side_of_equi"
+            android:inputType="numberDecimal" />
 
 
         <View
@@ -85,18 +47,17 @@
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="82dp"
+            android:layout_height="58dp"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
             android:contentDescription="@string/formula"
-            android:src="@drawable/tsidesoangle" />
+            android:src="@drawable/square" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_marginTop="16dp"
             android:background="@android:color/darker_gray" />
-
 
         <Button
             android:id="@+id/button01"
@@ -114,7 +75,7 @@
             android:id="@+id/result_01"
             android:layout_width="match_parent"
             android:layout_height="54dp"
-            android:layout_marginBottom="22dp"
+            android:layout_marginBottom="24dp"
             android:layout_marginTop="16dp"
             android:background="@color/colorPrimary"
             android:gravity="center_vertical"
@@ -127,7 +88,3 @@
 
     </LinearLayout>
 </ScrollView>
-
-
-
-
