--- a/app/src/main/res/layout/activity_circle_diameter_area.xml
+++ b/app/src/main/res/layout/activity_circle_diameter_area.xml
@@ -1,32 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/diameter_area_circle"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="@color/background_custom"
-    tools:context="com.sample.kedroon.easymath.BaseAndHeight"
-    android:id="@+id/base_and_height">
+    android:orientation="vertical"
+    tools:context="com.sample.kedroon.easymath.CircleDiameterArea">
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        ads:adSize="BANNER"
         android:visibility="gone"
+        ads:adSize="BANNER"
         ads:adUnitId="@string/banner_ad_unit_id">
-    </com.google.android.gms.ads.AdView>
 
+    </com.google.android.gms.ads.AdView>
 
 
     <ScrollView
 
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-
-
-
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -45,31 +42,18 @@
                 android:orientation="horizontal">
 
                 <EditText
-                    android:id="@+id/base"
+                    android:id="@+id/radius"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="8dp"
                     android:layout_marginRight="8dp"
                     android:layout_weight="1"
-                    android:hint="@string/base"
+                    android:hint="@string/radius"
                     android:inputType="numberDecimal" />
 
-                <View
-                    android:layout_width="1dp"
-                    android:layout_height="48dp"
-                    android:background="@android:color/darker_gray" />
-
-                <EditText
-                    android:id="@+id/height"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginStart="8dp"
-                    android:layout_weight="1"
-                    android:hint="@string/height"
-                    android:inputType="numberDecimal" />
 
             </LinearLayout>
+
 
             <View
                 android:layout_width="match_parent"
@@ -90,17 +74,26 @@
 
             <ImageView
                 android:layout_width="match_parent"
-                android:layout_height="82dp"
+                android:layout_height="36dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="16dp"
                 android:contentDescription="@string/formula"
-                android:src="@drawable/baseaheight" />
+                android:src="@drawable/diametercircle" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="48dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
+                android:contentDescription="@string/formula"
+                android:src="@drawable/areacircle" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="16dp"
                 android:background="@android:color/darker_gray" />
+
 
             <Button
                 android:id="@+id/button01"
@@ -118,8 +111,22 @@
                 android:id="@+id/result_01"
                 android:layout_width="match_parent"
                 android:layout_height="54dp"
-                android:layout_marginBottom="24dp"
                 android:layout_marginTop="16dp"
+                android:background="@color/colorPrimary"
+                android:gravity="center_vertical"
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingStart="16dp"
+                android:text="@string/diameter_result"
+                android:textColor="#FFFFFF"
+                android:textSize="18sp" />
+
+            <TextView
+                android:id="@+id/result_02"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:layout_marginBottom="22dp"
+                android:layout_marginTop="4dp"
                 android:background="@color/colorPrimary"
                 android:gravity="center_vertical"
                 android:paddingLeft="16dp"
@@ -131,7 +138,7 @@
 
         </LinearLayout>
     </ScrollView>
-
-
 </LinearLayout>
+
+
 
